Change phonenumber and add opening hours.

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -31,7 +31,7 @@
 
     %footer.mod-footer
       .contact
-        %p Tel: 0320 264 531
+        %p Tel: 06 - 28 69 70 18
         %p Parkhaven 9, Lelystad
         = link_to 'email ons!', 'mailto:tkonijnenburg@gmail.com', :class => 'email'
 
