--- a/source/stylesheets/base/_layout.css.sass
+++ b/source/stylesheets/base/_layout.css.sass
@@ -9,7 +9,7 @@ body
   min-height: 100%
   min-width: 320px
   padding-bottom: 100px
-  background: #241100 image-url("bg_home.jpg") no-repeat bottom center fixed
+  background: #241100 image-url("bg_homepage.jpg") no-repeat bottom center fixed
   background-size: cover
 
   &.menu
