--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,4 +1,4 @@
-.mod-content
+%section.mod-content
   %h1 Welkom bij Bistro Jan Goos
 
   %p Sinds 1 april zijn wij weer open, elke dag vanaf 11:00 uur. Met een nieuw team hopen we u hier snel eens te ontvangen.
