--- a/source/stylesheets/base/_typography.css.sass
+++ b/source/stylesheets/base/_typography.css.sass
@@ -25,3 +25,12 @@ a
   &:hover,
   &:focus
     text-decoration: underline
+
+em
+  font-style: italic
+
+strong
+  bold
+
+hr
+  margin-bottom: 16px
