--- a/source/stylesheets/modules/_header.css.sass
+++ b/source/stylesheets/modules/_header.css.sass
@@ -10,6 +10,7 @@
     padding: 0
     top: 50%
     left: 20px
+    z-index: 10
     +hide-text
 
     a
@@ -41,6 +42,8 @@
     display: inline-block
     font-size: 14px
     text-align: center
+    position: relative
+    z-index: 20
 
     a
       display: block
@@ -65,6 +68,14 @@
   .sizebox
     margin-top: 55%
 
+  +max-width(960px)
+    li a
+      padding: 0 25px
+
+  +max-width(800px)
+    li a
+      padding: 0 15px
+
   +max-width(700px)
     padding-top: 34%
 
@@ -82,11 +93,18 @@
       padding: 0
       text-align: center
 
-  +max-width(460px)
+    li a
+      padding: 0 25px
+
+  +max-width(550px)
     li a
       padding: 0 20px
 
-  +max-width(420px)
-
+  +max-width(480px)
     li a
       padding: 0 15px
+
+      &.facebook:before
+        top: -15px
+      span
+        display: none
