--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -7,7 +7,11 @@
     %title Bistro Jan Goos
 
     = stylesheet_link_tag 'application'
-    = javascript_include_tag 'all'
+    /[if lt IE 9]
+      = javascript_include_tag 'html5shiv'
+      = stylesheet_link_tag 'ie8'
+
+    -#= javascript_include_tag 'all'
 
   %body{:class => page_classes}
     %header.mod-header
