--- a/source/stylesheets/base/_layout.css.sass
+++ b/source/stylesheets/base/_layout.css.sass
@@ -9,17 +9,19 @@ body
   min-height: 100%
   min-width: 320px
   padding-bottom: 100px
-  background: #241100 image-url("bg_homepage.jpg") no-repeat bottom center fixed
+  background: #242e30 image-url("bg_homepage.jpg") no-repeat bottom center fixed
   background-size: cover
 
   &.menu
     background-image: image-url("bg_menu.jpg")
+    background-color: #241100
 
   &.info
     background-image: image-url("bg_info.jpg")
+    background-color: #010d27
 
   +max-width(350px)
-    padding-bottom: 140px
+    padding-bottom: 160px
 
 .layout
   @extend %clearfix
